bin/tests/errors/sema/sema_err_retval_outside_function.swg
#global fileprivate

var GlobalRetVal: retval // swc-expected-error {{sema_err_retval_outside_function}}
